--- a/etl.ipynb
+++ b/etl.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +376,7 @@
        "'object'"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,16 +387,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['data_base'] = pd.to_datetime(df['data_base'], format=\"%Y-%m-%d\")"
+    "df['dt_data_base'] = pd.to_datetime(df['data_base'], format=\"%Y-%m-%d\")\n",
+    "df.drop(columns=['data_base'], inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -405,18 +406,18 @@
        "'datetime64[ns]'"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['data_base'].dtype.name"
+    "df['dt_data_base'].dtype.name"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +441,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,17 +463,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['ct_classificacao'] = df['ct_porte'].apply(lambda x: x[0:2])\n",
-    "df['ct_porte'] = df['ct_porte'].apply(lambda x: x[5:])"
+    "df['ct_classificacao'] = df['ct_porte'].apply(lambda x: x[0:2]).astype('category')\n",
+    "df['ct_porte'] = df['ct_porte'].apply(lambda x: x[5:].strip()).astype('category')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +500,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,16 +511,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['ct_modalidade'] = df['ct_modalidade'].apply(lambda x: x[5:])"
+    "df['ct_modalidade'] = df['ct_modalidade'].apply(lambda x: x[5:].strip()).astype('category')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +539,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -549,16 +550,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['ct_ocupacao'] = df['ct_ocupacao'].apply(lambda x: x[5:])"
+    "df['ct_ocupacao'] = df['ct_ocupacao'].apply(lambda x: x[5:].strip()).astype('category')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +576,7 @@
        "Name: vl_carteira_ativa, dtype: float64"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -593,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +629,7 @@
        "Name: vl_carteira_ativa_n_arrastada, dtype: float64"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -639,13 +640,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "data_base                            datetime64[ns]\n",
        "ct_uf                                      category\n",
        "ct_tcb                                     category\n",
        "ct_sr                                      category\n",
@@ -653,8 +653,8 @@
        "ct_ocupacao                                category\n",
        "ct_cnae_secao                              category\n",
        "ct_cnae_subclasse                          category\n",
-       "ct_porte                                     object\n",
-       "ct_modalidade                                object\n",
+       "ct_porte                                   category\n",
+       "ct_modalidade                              category\n",
        "ct_origem                                  category\n",
        "ct_indexador                               category\n",
        "nu_numero_de_operacoes                        int64\n",
@@ -669,18 +669,176 @@
        "vl_carteira_inadimplida_arrastada           float64\n",
        "vl_ativo_problematico                       float64\n",
        "﻿data_base                                   object\n",
-       "ct_classificacao                             object\n",
+       "dt_data_base                         datetime64[ns]\n",
+       "ct_classificacao                           category\n",
        "vl_carteira_ativa_n_arrastada               float64\n",
        "dtype: object"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "57704\n",
+      "340110\n",
+      "1338061\n",
+      "1804485\n",
+      "737369\n",
+      "1971449\n"
+     ]
+    }
+   ],
+   "source": [
+    "print((df['vl_a_vencer_acima_de_5400_dias'] != 0.00).sum())\n",
+    "print((df['vl_a_vencer_de_1801_ate_5400_dias'] != 0.00).sum())\n",
+    "print((df['vl_a_vencer_de_361_ate_1080_dias'] != 0.00).sum())\n",
+    "print((df['vl_a_vencer_de_91_ate_360_dias'] != 0.00).sum())\n",
+    "print((df['vl_a_vencer_de_1081_ate_1800_dias'] != 0.00).sum())\n",
+    "print((df['vl_a_vencer_ate_90_dias'] != 0.00).sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CONVERSAO_FAIXAS = {\n",
+    "\t'vl_a_vencer_acima_de_5400_dias': '> 180',\n",
+    " \t'vl_a_vencer_de_1801_ate_5400_dias': '36-180',\n",
+    "\t'vl_a_vencer_de_1081_ate_1800_dias': '18-36',\n",
+    "\t'vl_a_vencer_de_361_ate_1080_dias': '12-18',\n",
+    "\t'vl_a_vencer_de_91_ate_360_dias': '3-12',\n",
+    "\t'vl_a_vencer_ate_90_dias': '0-3'\n",
+    "}\n",
+    "\n",
+    "def calcula_range(row):\n",
+    "    for col, val in CONVERSAO_FAIXAS.items():\n",
+    "        if row[col] != 0.00:\n",
+    "            return val\n",
+    "    return None\n",
+    "\n",
+    "df['ct_faixa_meses_ate_vencimento'] = df.apply(calcula_range, axis=1).astype('category')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ct_faixa_meses_ate_vencimento\n",
+       "12-18     603759\n",
+       "3-12      482856\n",
+       "18-36     401803\n",
+       "36-180    285139\n",
+       "0-3       253990\n",
+       "> 180      57704\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['ct_faixa_meses_ate_vencimento'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ct_uf                                      category\n",
+       "ct_tcb                                     category\n",
+       "ct_sr                                      category\n",
+       "ct_cliente                                 category\n",
+       "ct_ocupacao                                category\n",
+       "ct_cnae_secao                              category\n",
+       "ct_cnae_subclasse                          category\n",
+       "ct_porte                                   category\n",
+       "ct_modalidade                              category\n",
+       "ct_origem                                  category\n",
+       "ct_indexador                               category\n",
+       "nu_numero_de_operacoes                        int64\n",
+       "vl_a_vencer_ate_90_dias                     float64\n",
+       "vl_a_vencer_de_91_ate_360_dias              float64\n",
+       "vl_a_vencer_de_361_ate_1080_dias            float64\n",
+       "vl_a_vencer_de_1081_ate_1800_dias           float64\n",
+       "vl_a_vencer_de_1801_ate_5400_dias           float64\n",
+       "vl_a_vencer_acima_de_5400_dias              float64\n",
+       "vl_vencido_acima_de_15_dias                 float64\n",
+       "vl_carteira_ativa                           float64\n",
+       "vl_carteira_inadimplida_arrastada           float64\n",
+       "vl_ativo_problematico                       float64\n",
+       "﻿data_base                                   object\n",
+       "dt_data_base                         datetime64[ns]\n",
+       "ct_classificacao                           category\n",
+       "vl_carteira_ativa_n_arrastada               float64\n",
+       "ct_faixa_meses_ate_vencimento              category\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        Acima de 20 salários mínimos\n",
+       "1        Acima de 20 salários mínimos\n",
+       "2        Acima de 20 salários mínimos\n",
+       "3        Acima de 20 salários mínimos\n",
+       "4        Acima de 20 salários mínimos\n",
+       "                     ...             \n",
+       "14995                           Micro\n",
+       "14996                           Micro\n",
+       "14997                           Micro\n",
+       "14998                           Micro\n",
+       "14999                         Pequeno\n",
+       "Name: ct_porte, Length: 2190000, dtype: category\n",
+       "Categories (13, object): ['Acima de 20 salários mínimos', 'Até 1 salário mínimo', 'Grande', 'Indisponível', ..., 'Micro', 'Médio', 'Pequeno', 'Sem rendimento']"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['ct_porte']"
    ]
   },
   {
@@ -692,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
