atualização etl, organização e documentações

--- a/etl.ipynb
+++ b/etl.ipynb
@@ -9,31 +9,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "%%capture\n",
-    "%pip install pandas matplotlib requests fastparquet"
+    "%pip install pandas requests fastparquet"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import zipfile, requests, os\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import fastparquet\n",
     "\n",
     "pd.options.display.float_format = '{:.2f}'.format"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,12 +88,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Extração Manual"
+    "### Extração Manual e manutenção da integridade da zona Staging"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,39 +110,51 @@
     "\t'planilha_2021',\n",
     "\t'planilha_2022',\n",
     "\t'planilha_2023',\n",
-    "\t'planilha_2024'\n",
+    "\t'planilha_2024',\n",
     "]\n",
     "\n",
     "for planilha in planilhas:\n",
-    "\tif not os.path.exists(f'data/{planilha}.zip'):\n",
+    "\tif not os.path.exists(f'data/staging/{planilha}.zip'):\n",
     "\t\turl = f'https://www.bcb.gov.br/pda/desig/{planilha}.zip'\n",
     "\n",
     "\t\tprint(f'Baixando arquivo \"{planilha}.zip\"...')\n",
     "\t\tresponse = requests.get(url)\n",
     "\n",
-    "\t\twith open(f'data/{planilha}.zip', 'wb') as f:\n",
+    "\t\twith open(f'data/staging/{planilha}.zip', 'wb') as f:\n",
     "\t\t\tf.write(response.content)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exportando para zona Raw"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "if not os.path.exists('data/planilhas'):\n",
-    "\tos.makedirs('data/planilhas')\n",
+    "if not os.path.exists('data/raw'):\n",
+    "\tos.makedirs('data/raw')\n",
     "\n",
     "for planilha in planilhas:\n",
-    "    zip_obj = zipfile.ZipFile(f'data/{planilha}.zip', 'r')\n",
+    "    zip_obj = zipfile.ZipFile(f'data/staging/{planilha}.zip', 'r')\n",
     "    extracted_files = zip_obj.namelist()\n",
     "\n",
     "    for file in extracted_files:\n",
-    "        extracted_path = os.path.join(f'data/planilhas', file)\n",
+    "        extracted_path = os.path.join(f'data/raw', file)\n",
     "        \n",
     "        if not os.path.exists(extracted_path):\n",
     "            print(f'Extraindo {file}...')\n",
-    "            zip_obj.extract(file, f'data/planilhas')\n",
+    "            try:\n",
+    "                zip_obj.extract(file, 'data/raw')\n",
+    "            except zipfile.BadZipFile:\n",
+    "                print(f\"Erro: O arquivo {planilha}.zip está corrompido.\")\n",
+    "            except Exception as e:\n",
+    "                print(f\"Erro ao extrair {file}: {e}\")\n",
     "\n",
     "    zip_obj.close()"
    ]
@@ -158,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -315,29 +325,13 @@
     }
    ],
    "source": [
-    "files = os.listdir('data/planilhas')\n",
+    "files = os.listdir('data/raw')\n",
     "files.sort()\n",
     "df = pd.DataFrame()\n",
     "for file in files:\n",
-    "    temp_df = pd.read_csv(f'data/planilhas/{file}', sep=';', encoding='utf-8', nrows=15000)\n",
+    "    temp_df = pd.read_csv(f'data/raw/{file}', sep=';', encoding='utf-8-sig', nrows=15000)\n",
     "    df = pd.concat([df, temp_df])\n",
     "    print(f'Processado o arquivo {file}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Exportando para zona Raw"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "export_to_parquet(df, 'data/raw')"
    ]
   },
   {
@@ -349,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,37 +361,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'object'"
+       "data_base                              object\n",
+       "ct_uf                                category\n",
+       "ct_tcb                               category\n",
+       "ct_sr                                category\n",
+       "ct_cliente                           category\n",
+       "ct_ocupacao                          category\n",
+       "ct_cnae_secao                        category\n",
+       "ct_cnae_subclasse                    category\n",
+       "ct_porte                             category\n",
+       "ct_modalidade                        category\n",
+       "ct_origem                            category\n",
+       "ct_indexador                         category\n",
+       "nu_numero_de_operacoes                  int64\n",
+       "vl_a_vencer_ate_90_dias               float64\n",
+       "vl_a_vencer_de_91_ate_360_dias        float64\n",
+       "vl_a_vencer_de_361_ate_1080_dias      float64\n",
+       "vl_a_vencer_de_1081_ate_1800_dias     float64\n",
+       "vl_a_vencer_de_1801_ate_5400_dias     float64\n",
+       "vl_a_vencer_acima_de_5400_dias        float64\n",
+       "vl_vencido_acima_de_15_dias           float64\n",
+       "vl_carteira_ativa                     float64\n",
+       "vl_carteira_inadimplida_arrastada     float64\n",
+       "vl_ativo_problematico                 float64\n",
+       "dtype: object"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['data_base'].dtype.name"
+    "df.dtypes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['dt_data_base'] = pd.to_datetime(df['data_base'], format=\"%Y-%m-%d\")\n",
+    "df['dt_data_base'] = pd.to_datetime(df['data_base'].copy(), format=\"%Y-%m-%d\")\n",
     "df.drop(columns=['data_base'], inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +423,7 @@
        "'datetime64[ns]'"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +458,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +517,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +556,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +593,7 @@
        "Name: vl_carteira_ativa, dtype: float64"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -612,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -629,7 +646,7 @@
        "Name: vl_carteira_ativa_n_arrastada, dtype: float64"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -640,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -668,14 +685,13 @@
        "vl_carteira_ativa                           float64\n",
        "vl_carteira_inadimplida_arrastada           float64\n",
        "vl_ativo_problematico                       float64\n",
-       "﻿data_base                                   object\n",
        "dt_data_base                         datetime64[ns]\n",
        "ct_classificacao                           category\n",
        "vl_carteira_ativa_n_arrastada               float64\n",
        "dtype: object"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -686,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -713,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -737,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -753,7 +769,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -764,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -792,7 +808,6 @@
        "vl_carteira_ativa                           float64\n",
        "vl_carteira_inadimplida_arrastada           float64\n",
        "vl_ativo_problematico                       float64\n",
-       "﻿data_base                                   object\n",
        "dt_data_base                         datetime64[ns]\n",
        "ct_classificacao                           category\n",
        "vl_carteira_ativa_n_arrastada               float64\n",
@@ -800,7 +815,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -811,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -832,7 +847,7 @@
        "Categories (13, object): ['Acima de 20 salários mínimos', 'Até 1 salário mínimo', 'Grande', 'Indisponível', ..., 'Micro', 'Médio', 'Pequeno', 'Sem rendimento']"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -850,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -874,7 +889,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
