novo dado no refined para pegar valor por parcela

--- a/etl.ipynb
+++ b/etl.ipynb
@@ -739,7 +739,7 @@
     "\t'vl_a_vencer_de_1081_ate_1800_dias': '18-36',\n",
     "\t'vl_a_vencer_de_361_ate_1080_dias': '12-18',\n",
     "\t'vl_a_vencer_de_91_ate_360_dias': '3-12',\n",
-    "\t'vl_a_vencer_ate_90_dias': '0-3'\n",
+    "\t'vl_a_vencer_ate_90_dias': '0-3',\n",
     "}\n",
     "\n",
     "def calcula_range(row):\n",
@@ -782,46 +782,9 @@
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "ct_uf                                      category\n",
-       "ct_tcb                                     category\n",
-       "ct_sr                                      category\n",
-       "ct_cliente                                 category\n",
-       "ct_ocupacao                                category\n",
-       "ct_cnae_secao                              category\n",
-       "ct_cnae_subclasse                          category\n",
-       "ct_porte                                   category\n",
-       "ct_modalidade                              category\n",
-       "ct_origem                                  category\n",
-       "ct_indexador                               category\n",
-       "nu_numero_de_operacoes                        int64\n",
-       "vl_a_vencer_ate_90_dias                     float64\n",
-       "vl_a_vencer_de_91_ate_360_dias              float64\n",
-       "vl_a_vencer_de_361_ate_1080_dias            float64\n",
-       "vl_a_vencer_de_1081_ate_1800_dias           float64\n",
-       "vl_a_vencer_de_1801_ate_5400_dias           float64\n",
-       "vl_a_vencer_acima_de_5400_dias              float64\n",
-       "vl_vencido_acima_de_15_dias                 float64\n",
-       "vl_carteira_ativa                           float64\n",
-       "vl_carteira_inadimplida_arrastada           float64\n",
-       "vl_ativo_problematico                       float64\n",
-       "dt_data_base                         datetime64[ns]\n",
-       "ct_classificacao                           category\n",
-       "vl_carteira_ativa_n_arrastada               float64\n",
-       "ct_faixa_meses_ate_vencimento              category\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df.dtypes"
+    "df['vl_media_carteira_ativa_por_operacao'] = df['vl_carteira_ativa'] / df['nu_numero_de_operacoes']"
    ]
   },
   {
@@ -832,19 +795,15 @@
     {
      "data": {
       "text/plain": [
-       "0        Acima de 20 salários mínimos\n",
-       "1        Acima de 20 salários mínimos\n",
-       "2        Acima de 20 salários mínimos\n",
-       "3        Acima de 20 salários mínimos\n",
-       "4        Acima de 20 salários mínimos\n",
-       "                     ...             \n",
-       "14995                           Micro\n",
-       "14996                           Micro\n",
-       "14997                           Micro\n",
-       "14998                           Micro\n",
-       "14999                         Pequeno\n",
-       "Name: ct_porte, Length: 2190000, dtype: category\n",
-       "Categories (13, object): ['Acima de 20 salários mínimos', 'Até 1 salário mínimo', 'Grande', 'Indisponível', ..., 'Micro', 'Médio', 'Pequeno', 'Sem rendimento']"
+       "count     2190000.00\n",
+       "mean        36578.75\n",
+       "std        826862.60\n",
+       "min             0.00\n",
+       "25%           708.67\n",
+       "50%          2937.60\n",
+       "75%         11163.86\n",
+       "max     139226392.26\n",
+       "Name: vl_media_carteira_ativa_por_operacao, dtype: float64"
       ]
      },
      "execution_count": 26,
@@ -853,7 +812,7 @@
     }
    ],
    "source": [
-    "df['ct_porte']"
+    "df['vl_media_carteira_ativa_por_operacao'].describe()"
    ]
   },
   {
